work on first draft of login screen. updated screenwrapper elements.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,14 +32,21 @@
   border: 1px solid red;
 } */
 
+#root {
+  height: 100%;
+}
+
 body, html {
+  height: 100%;
   font-size: 15px;
   /* letter-spacing: -0.1px; */
   font-family: 'Metropolis Regular';
   -webkit-font-smoothing: antialiased;
+  background-color: #F7F7F7;
 }
 
 .App {
+  height: 100%;
   text-align: center;
 }
 
